table design added to cusongoing

--- a/UserRoles/UserRoles.csproj
+++ b/UserRoles/UserRoles.csproj
@@ -1340,6 +1340,78 @@
     <Content Include="Scripts\SignaturePadInit.js" />
     <Content Include="Scripts\signature_pad.js" />
     <Content Include="Scripts\signature_pad.min.js" />
+    <Content Include="tables\404.html" />
+    <Content Include="tables\500.html" />
+    <Content Include="tables\blank.html" />
+    <Content Include="tables\cards.html" />
+    <Content Include="tables\carousels.html" />
+    <Content Include="tables\charts.html" />
+    <Content Include="tables\css\bar.css" />
+    <Content Include="tables\css\bootstrap.css" />
+    <Content Include="tables\css\fontawesome-all.css" />
+    <Content Include="tables\css\pignose.calender.css" />
+    <Content Include="tables\css\simplyCountdown.css" />
+    <Content Include="tables\css\style.css" />
+    <Content Include="tables\css\style4.css" />
+    <Content Include="tables\css\widgets.css" />
+    <Content Include="tables\forgot.html" />
+    <Content Include="tables\forms.html" />
+    <Content Include="tables\grids.html" />
+    <Content Include="tables\images\1.jpg" />
+    <Content Include="tables\images\2.jpg" />
+    <Content Include="tables\images\3.jpg" />
+    <Content Include="tables\images\4.jpg" />
+    <Content Include="tables\images\5.jpg" />
+    <Content Include="tables\images\b1.jpg" />
+    <Content Include="tables\images\ban1.jpg" />
+    <Content Include="tables\images\ban2.jpg" />
+    <Content Include="tables\images\ban3.jpg" />
+    <Content Include="tables\images\ban4.jpg" />
+    <Content Include="tables\images\ban5.jpg" />
+    <Content Include="tables\images\ban6.jpg" />
+    <Content Include="tables\images\c1.jpg" />
+    <Content Include="tables\images\c2.jpg" />
+    <Content Include="tables\images\c3.jpg" />
+    <Content Include="tables\images\c4.jpg" />
+    <Content Include="tables\images\clone.jpg" />
+    <Content Include="tables\images\icon_navs.png" />
+    <Content Include="tables\images\menu1.jpg" />
+    <Content Include="tables\images\Preloader_2.gif" />
+    <Content Include="tables\images\profile.jpg" />
+    <Content Include="tables\images\timer.jpg" />
+    <Content Include="tables\index.html" />
+    <Content Include="tables\js\amcharts.js" />
+    <Content Include="tables\js\bootstrap.min.js" />
+    <Content Include="tables\js\chart1.js" />
+    <Content Include="tables\js\circle_bar.js" />
+    <Content Include="tables\js\example.js" />
+    <Content Include="tables\js\index.js" />
+    <Content Include="tables\js\jquery-2.2.3.min.js" />
+    <Content Include="tables\js\jquery.charts.js" />
+    <Content Include="tables\js\kuma-gauge.jquery.js" />
+    <Content Include="tables\js\modernizr.js" />
+    <Content Include="tables\js\moment.min.js" />
+    <Content Include="tables\js\percentage-circles.js" />
+    <Content Include="tables\js\pignose.calender.js" />
+    <Content Include="tables\js\prettymaps.js" />
+    <Content Include="tables\js\raphael-min.js" />
+    <Content Include="tables\js\rumcaJS.js" />
+    <Content Include="tables\js\script.js" />
+    <Content Include="tables\js\SimpleChart.js" />
+    <Content Include="tables\js\simplyCountdown.js" />
+    <Content Include="tables\js\skycons.js" />
+    <Content Include="tables\login.html" />
+    <Content Include="tables\mailbox.html" />
+    <Content Include="tables\maps.html" />
+    <Content Include="tables\modals.html" />
+    <Content Include="tables\pricing.html" />
+    <Content Include="tables\register.html" />
+    <Content Include="tables\starter-license-W3Layouts.txt" />
+    <Content Include="tables\tables.html" />
+    <Content Include="tables\webfonts\fa-brands-400.svg" />
+    <Content Include="tables\webfonts\fa-regular-400.svg" />
+    <Content Include="tables\webfonts\fa-solid-900.svg" />
+    <Content Include="tables\widgets.html" />
     <Content Include="voice\index.html" />
     <Content Include="voice\script.js" />
     <Content Include="voice\styles.css" />
@@ -1561,6 +1633,19 @@
     <Content Include="Views\Account\Details.cshtml" />
     <Content Include="Views\Account\Edit.cshtml" />
     <Content Include="Views\Account\Remove.cshtml" />
+    <Content Include="tables\images\Thumbs.db" />
+    <Content Include="tables\webfonts\fa-brands-400.eot" />
+    <Content Include="tables\webfonts\fa-brands-400.ttf" />
+    <Content Include="tables\webfonts\fa-brands-400.woff" />
+    <Content Include="tables\webfonts\fa-brands-400.woff2" />
+    <Content Include="tables\webfonts\fa-regular-400.eot" />
+    <Content Include="tables\webfonts\fa-regular-400.ttf" />
+    <Content Include="tables\webfonts\fa-regular-400.woff" />
+    <Content Include="tables\webfonts\fa-regular-400.woff2" />
+    <Content Include="tables\webfonts\fa-solid-900.eot" />
+    <Content Include="tables\webfonts\fa-solid-900.ttf" />
+    <Content Include="tables\webfonts\fa-solid-900.woff" />
+    <Content Include="tables\webfonts\fa-solid-900.woff2" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
