--- a/UserRoles/UserRoles.csproj
+++ b/UserRoles/UserRoles.csproj
@@ -1323,6 +1323,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
+    <None Include="Properties\PublishProfiles\2020grp26 - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\2020grp26 - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.5.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.5.1.js" />
