--- a/UserRoles/Web.config
+++ b/UserRoles/Web.config
@@ -25,7 +25,7 @@
 
 
   <connectionStrings>
-    <add name="gpdb" connectionString="Server=tcp:gpdb.database.windows.net,1433;Initial Catalog=gpdb;Persist Security Info=False;User ID=SqlAdmin;Password=Admin123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
+    <add name="gpdb1" connectionString="Server=tcp:gpdp1.database.windows.net,1433;Initial Catalog=gpdb1;Persist Security Info=False;User ID=SqlAdmin;Password=Admin123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
 
    <!-- <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=DefaultConnection;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\DefaultConnection.mdf" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
